--- a/deployments/examples/opencloud_full/.env
+++ b/deployments/examples/opencloud_full/.env
@@ -74,23 +74,23 @@ LOG_LEVEL=
 # Per default, S3 storage is disabled and the local filesystem is used.
 # To enable S3 storage, uncomment the following line and configure the S3 storage.
 # For more details see:
-# https://doc.opencloud.eu/opencloud/next/deployment/storage/s3.html
+# https://doc.opencloud.eu/opencloud/next/deployment/storage/decomposeds3.html
 # Note: the leading colon is required to enable the service.
-#S3NG=:s3ng.yml
+#DECOMPOSEDS3=:decomposeds3.yml
 # Configure the S3 storage endpoint. Defaults to "http://minio:9000" for testing purposes.
-S3NG_ENDPOINT=
+DECOMPOSEDS3_ENDPOINT=
 # S3 region. Defaults to "default".
-S3NG_REGION=
+DECOMPOSEDS3_REGION=
 # S3 access key. Defaults to "opencloud"
-S3NG_ACCESS_KEY=
+DECOMPOSEDS3_ACCESS_KEY=
 # S3 secret. Defaults to "opencloud-secret-key"
-S3NG_SECRET_KEY=
+DECOMPOSEDS3_SECRET_KEY=
 # S3 bucket. Defaults to "opencloud"
-S3NG_BUCKET=
+DECOMPOSEDS3_BUCKET=
 #
 # For testing purposes, add local minio S3 storage to the docker-compose file.
 # The leading colon is required to enable the service.
-#S3NG_MINIO=:minio.yml
+#DECOMPOSEDS3_MINIO=:minio.yml
 # Minio domain. Defaults to "minio.opencloud.test".
 MINIO_DOMAIN=
 
@@ -237,4 +237,4 @@ INBUCKET_DOMAIN=
 # This MUST be the last line as it assembles the supplemental compose files to be used.
 # ALL supplemental configs must be added here, whether commented or not.
 # Each var must either be empty or contain :path/file.yml
-COMPOSE_FILE=docker-compose.yml${OPENCLOUD:-}${TIKA:-}${S3NG:-}${S3NG_MINIO:-}${COLLABORA:-}${MONITORING:-}${IMPORTER:-}${CLAMAV:-}${ONLYOFFICE:-}${INBUCKET:-}${EXTENSIONS:-}${UNZIP:-}${DRAWIO:-}${JSONVIEWER:-}${PROGRESSBARS:-}${EXTERNALSITES:-}
+COMPOSE_FILE=docker-compose.yml${OPENCLOUD:-}${TIKA:-}${DECOMPOSEDS3:-}${DECOMPOSEDS3_MINIO:-}${COLLABORA:-}${MONITORING:-}${IMPORTER:-}${CLAMAV:-}${ONLYOFFICE:-}${INBUCKET:-}${EXTENSIONS:-}${UNZIP:-}${DRAWIO:-}${JSONVIEWER:-}${PROGRESSBARS:-}${EXTERNALSITES:-}
