add posix to full deployment
Signed-off-by: Jörn Friedrich Dreyer <jfd@butonic.de>

--- a/deployments/examples/opencloud_full/.env
+++ b/deployments/examples/opencloud_full/.env
@@ -71,7 +71,7 @@ LOG_LEVEL=
 
 # S3 Storage configuration - optional
 # OpenCloud supports S3 storage as primary storage.
-# Per default, S3 storage is disabled and the local filesystem is used.
+# Per default, S3 storage is disabled and the decomposed storage driver is used.
 # To enable S3 storage, uncomment the following line and configure the S3 storage.
 # For more details see:
 # https://doc.opencloud.eu/opencloud/next/deployment/storage/decomposeds3.html
@@ -93,6 +93,13 @@ DECOMPOSEDS3_BUCKET=
 #DECOMPOSEDS3_MINIO=:minio.yml
 # Minio domain. Defaults to "minio.opencloud.test".
 MINIO_DOMAIN=
+
+# POSIX Storage configuration - optional
+# OpenCloud supports posix storage as primary storage.
+# Per default, S3 storage is disabled and the decomposed storage driver is used.
+# To enable POSIX storage, uncomment the following line.
+# Note: the leading colon is required to enable the service.
+#POSIX=:posix.yml
 
 # Define SMPT settings if you would like to send OpenCloud email notifications.
 # For more details see:
@@ -237,4 +244,4 @@ INBUCKET_DOMAIN=
 # This MUST be the last line as it assembles the supplemental compose files to be used.
 # ALL supplemental configs must be added here, whether commented or not.
 # Each var must either be empty or contain :path/file.yml
-COMPOSE_FILE=docker-compose.yml${OPENCLOUD:-}${TIKA:-}${DECOMPOSEDS3:-}${DECOMPOSEDS3_MINIO:-}${COLLABORA:-}${MONITORING:-}${IMPORTER:-}${CLAMAV:-}${ONLYOFFICE:-}${INBUCKET:-}${EXTENSIONS:-}${UNZIP:-}${DRAWIO:-}${JSONVIEWER:-}${PROGRESSBARS:-}${EXTERNALSITES:-}
+COMPOSE_FILE=docker-compose.yml${OPENCLOUD:-}${TIKA:-}${DECOMPOSEDS3:-}${DECOMPOSEDS3_MINIO:-}${POSIX:-}${COLLABORA:-}${MONITORING:-}${IMPORTER:-}${CLAMAV:-}${ONLYOFFICE:-}${INBUCKET:-}${EXTENSIONS:-}${UNZIP:-}${DRAWIO:-}${JSONVIEWER:-}${PROGRESSBARS:-}${EXTERNALSITES:-}
