--- a/opencloud/docker/Dockerfile.linux.multiarch
+++ b/opencloud/docker/Dockerfile.linux.multiarch
@@ -1,4 +1,5 @@
 FROM golang:alpine3.20 AS build
+ARG TARGETOS
 ARG TARGETARCH
 
 RUN apk add bash make git curl gcc musl-dev libc-dev binutils-gold inotify-tools vips-dev
@@ -6,13 +7,11 @@ RUN apk add bash make git curl gcc musl-dev libc-dev binutils-gold inotify-tools
 COPY ./ /opencloud/
 
 WORKDIR /opencloud/opencloud
-RUN GOOS=linux GOARCH="${TARGETARCH}" make ci-go-generate build ENABLE_VIPS=true
+RUN GOOS="${TARGETOS:-linux}" GOARCH="${TARGETARCH:-amd64}" make ci-go-generate build ENABLE_VIPS=true
 
 FROM alpine:3.20
-ARG TARGETARCH
-
-ARG VERSION=""
-ARG REVISION=""
+ARG VERSION
+ARG REVISION
 
 RUN apk add --no-cache attr bash ca-certificates curl inotify-tools libc6-compat mailcap tree vips patch && \
 	echo 'hosts: files dns' >| /etc/nsswitch.conf
