--- a/tests/ocwrapper/Makefile
+++ b/tests/ocwrapper/Makefile
@@ -3,6 +3,7 @@ GOARCH := $(shell go env GOARCH)
 
 .PHONY: build
 build:
+	GOWORK=off \
 	GOOS=$(GOOS) \
 	GOARCH=$(GOARCH) \
 	go build -o bin/ocwrapper
