--- a/deployments/examples/opencloud_full/.env
+++ b/deployments/examples/opencloud_full/.env
@@ -36,13 +36,13 @@ TRAEFIK_ACME_CASERVER=
 # Note: the leading colon is required to enable the service.
 OPENCLOUD=:opencloud.yml
 # The opencloud container image.
-# For production releases: "opencloud-eu/opencloud"
-# For rolling releases:    "opencloud-eu/opencloud-rolling"
+# For production releases: "opencloudeu/opencloud"
+# For rolling releases:    "opencloudeu/opencloud-rolling"
 # Defaults to production if not set otherwise
-OC_DOCKER_IMAGE=opencloud-eu/opencloud
+OC_DOCKER_IMAGE=opencloudeu/opencloud
 # The openCloud container version.
 # Defaults to "latest" and points to the latest stable tag.
-OC_DOCKER_TAG=dev
+OC_DOCKER_TAG=
 # Domain of openCloud, where you can find the frontend.
 # Defaults to "cloud.opencloud.test"
 OC_DOMAIN=
