--- a/opencloud/docker/Dockerfile.linux.multiarch
+++ b/opencloud/docker/Dockerfile.linux.multiarch
@@ -7,11 +7,13 @@ RUN apk add bash make git curl gcc musl-dev libc-dev binutils-gold inotify-tools
 COPY ./ /opencloud/
 
 WORKDIR /opencloud/opencloud
-RUN GOOS="${TARGETOS:-linux}" GOARCH="${TARGETARCH:-amd64}" make ci-go-generate build ENABLE_VIPS=true
+RUN GOOS="${TARGETOS:-linux}" GOARCH="${TARGETARCH:-amd64}" make ci-go-generate release-linux-docker-${TARGETARCH} ENABLE_VIPS=true
 
 FROM alpine:3.20
 ARG VERSION
 ARG REVISION
+ARG TARGETOS
+ARG TARGETARCH
 
 RUN apk add --no-cache attr bash ca-certificates curl inotify-tools libc6-compat mailcap tree vips patch && \
 	echo 'hosts: files dns' >| /etc/nsswitch.conf
@@ -48,4 +50,4 @@ EXPOSE 9200/tcp
 ENTRYPOINT ["/usr/bin/opencloud"]
 CMD ["server"]
 
-COPY --from=build /opencloud/opencloud/bin/opencloud /usr/bin/opencloud
+COPY --from=build /opencloud/opencloud/dist/binaries/opencloud-linux-${TARGETARCH} /usr/bin/opencloud
