feat: use extensions in full example

--- a/deployments/examples/opencloud_full/.env
+++ b/deployments/examples/opencloud_full/.env
@@ -134,22 +134,21 @@ START_ADDITIONAL_SERVICES="notifications"
 # For more details see https://github.com/opencloud-eu/web-extensions/blob/main/README.md
 # Note: the leading colon is required to enable the service.
 # Enable this to create a new named volume
-#EXTENSIONS=:web_extensions/extensions.yml
+EXTENSIONS=:web_extensions/extensions.yml
 # Enable the desired extensions by uncommenting the following lines.
 # Note: the leading colon is required to enable the service.
 # Note: if you want to remove a web extension, you must delete the opencloud-apps volume. It will be properly recreated on docker compose startup.
-#UNZIP=:web_extensions/unzip.yml
-#DRAWIO=:web_extensions/drawio.yml
-#JSONVIEWER=:web_extensions/jsonviewer.yml
-#PROGRESSBARS=:web_extensions/progressbars.yml
-#EXTERNALSITES=:web_extensions/externalsites.yml
+UNZIP=:web_extensions/unzip.yml
+DRAWIO=:web_extensions/drawio.yml
+JSONVIEWER=:web_extensions/jsonviewer.yml
+PROGRESSBARS=:web_extensions/progressbars.yml
+EXTERNALSITES=:web_extensions/externalsites.yml
 # External Sites needs additional config, see the following files for more details.
 # - config/opencloud/apps.yaml
 # - config/opencloud/csp.yaml
 #IMPORTER=:web_extensions/importer.yml
 # The importer needs additional config, see the following lines for more details.
 ## The docker image to be used for uppy companion.
-# opencloud has built a container with public link import support.
 COMPANION_IMAGE=
 # Domain of Uppy Companion. Defaults to "companion.opencloud.test".
 COMPANION_DOMAIN=
