fix: set compose path separator for windows support

--- a/deployments/examples/opencloud_full/.env
+++ b/deployments/examples/opencloud_full/.env
@@ -239,6 +239,9 @@ WOPISERVER_ONLYOFFICE_DOMAIN=
 # Domain for Inbucket. Defaults to "mail.opencloud.test".
 INBUCKET_DOMAIN=
 
+### Compose Configuration ###
+# Path separator for supplemental compose files specified in COMPOSE_FILE.
+COMPOSE_PATH_SEPARATOR=:
 
 ## IMPORTANT ##
 # This MUST be the last line as it assembles the supplemental compose files to be used.
