enhancement: split make ci-node-generate and ci-go-generate into prod and dev stages

--- a/protogen/Makefile
+++ b/protogen/Makefile
@@ -1,16 +1,12 @@
-include ../.make/recursion.mk
+SHELL := bash
+NAME := protogen
 
-############ tooling ############
-ifneq (, $(shell command -v go 2> /dev/null)) # suppress `command not found warnings` for non go targets in CI
 include ../.bingo/Variables.mk
-endif
-
-############ generate ############
+include ../.make/default.mk
+include ../.make/deprecate.mk
+include ../.make/recursion.mk
 include ../.make/generate.mk
 
-.PHONY: ci-node-generate
-ci-node-generate:
-
-.PHONY: ci-go-generate
-ci-go-generate: $(MOCKERY) # CI runs ci-node-generate automatically before this target
+.PHONY: go-generate-prod
+go-generate-prod: $(MOCKERY)
 	$(MOCKERY)
