--- a/opencloud/docker/Dockerfile.linux.multiarch
+++ b/opencloud/docker/Dockerfile.linux.multiarch
@@ -8,7 +8,7 @@ COPY ./ /opencloud/
 
 WORKDIR /opencloud
 RUN GOOS="${TARGETOS:-linux}" GOARCH="${TARGETARCH:-amd64}" ; \
-    make ci-go-generate ; \
+    make go-generate-prod ; \
     make -C opencloud release-linux-docker-${TARGETARCH} ENABLE_VIPS=true
 
 FROM alpine:3.20
