--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -1,40 +1,14 @@
 SHELL := bash
 NAME := pkg
 
-include ../.make/recursion.mk
-
-############ tooling ############
-ifneq (, $(shell command -v go 2> /dev/null)) # suppress `command not found warnings` for non go targets in CI
 include ../.bingo/Variables.mk
-endif
-
-############ go tooling ############
+include ../.make/default.mk
+include ../.make/deprecate.mk
+include ../.make/recursion.mk
 include ../.make/go.mk
-
-############ release ############
 include ../.make/release.mk
-
-############ docs generate ############
-SKIP_CONFIG_DOCS_GENERATE = 1
-
 include ../.make/docs.mk
 
-.PHONY: docs-generate
-docs-generate:
-
-############ generate ############
-include ../.make/generate.mk
-
-.PHONY: ci-go-generate
-ci-go-generate: $(MOCKERY) # CI runs ci-node-generate automatically before this target
+.PHONY: go-generate-prod
+go-generate-prod: $(MOCKERY)
 	$(MOCKERY)
-
-.PHONY: ci-node-generate
-ci-node-generate:
-
-############ licenses ############
-.PHONY: ci-node-check-licenses
-ci-node-check-licenses:
-
-.PHONY: ci-node-save-licenses
-ci-node-save-licenses:
