--- a/protogen/Makefile
+++ b/protogen/Makefile
@@ -3,10 +3,9 @@ NAME := protogen
 
 include ../.bingo/Variables.mk
 include ../.make/default.mk
-include ../.make/deprecate.mk
 include ../.make/recursion.mk
 include ../.make/generate.mk
 
-.PHONY: go-generate-prod
-go-generate-prod: $(MOCKERY)
+.PHONY: go-generate
+go-generate: $(MOCKERY)
 	$(MOCKERY)
