--- a/services/collaboration/Makefile
+++ b/services/collaboration/Makefile
@@ -3,12 +3,11 @@ NAME := collaboration
 
 include ../../.bingo/Variables.mk
 include ../../.make/default.mk
-include ../../.make/deprecate.mk
 include ../../.make/recursion.mk
 include ../../.make/go.mk
 include ../../.make/release.mk
 include ../../.make/docs.mk
 
-.PHONY: go-generate-prod
-go-generate-prod: $(MOCKERY)
+.PHONY: go-generate
+go-generate: $(MOCKERY)
 	$(MOCKERY)
