--- a/services/search/Makefile
+++ b/services/search/Makefile
@@ -3,13 +3,12 @@ NAME := search
 
 include ../../.bingo/Variables.mk
 include ../../.make/default.mk
-include ../../.make/deprecate.mk
 include ../../.make/recursion.mk
 include ../../.make/go.mk
 include ../../.make/release.mk
 include ../../.make/docs.mk
 
-.PHONY: go-generate-prod
-go-generate-prod: $(PIGEON) $(MOCKERY)
+.PHONY: go-generate
+go-generate: $(PIGEON) $(MOCKERY)
 	$(MOCKERY)
 	$(PIGEON) -optimize-grammar -optimize-parser -o ../../pkg/kql/dictionary_gen.go ../../pkg/kql/dictionary.peg
