--- a/services/thumbnails/Makefile
+++ b/services/thumbnails/Makefile
@@ -3,15 +3,14 @@ NAME := thumbnails
 
 include ../../.bingo/Variables.mk
 include ../../.make/default.mk
-include ../../.make/deprecate.mk
 include ../../.make/recursion.mk
 include ../../.make/go.mk
 include ../../.make/release.mk
 include ../../.make/docs.mk
 include ../../.make/protobuf.mk
 
-.PHONY: go-generate-prod
-go-generate-prod: protobuf
+.PHONY: go-generate
+go-generate: protobuf
 
 .PHONY: protobuf
 protobuf: buf-generate
