--- a/protogen/Makefile
+++ b/protogen/Makefile
@@ -1,7 +1,9 @@
 SHELL := bash
 NAME := protogen
 
+ifneq (, $(shell command -v go 2> /dev/null)) # suppress `command not found warnings` for non go targets in CI
 include ../.bingo/Variables.mk
+endif
 include ../.make/default.mk
 include ../.make/recursion.mk
 include ../.make/generate.mk
