--- a/services/auth-app/Makefile
+++ b/services/auth-app/Makefile
@@ -1,7 +1,10 @@
 SHELL := bash
 NAME := auth-app
 
+ifneq (, $(shell command -v go 2> /dev/null)) # suppress `command not found warnings` for non go targets in CI
 include ../../.bingo/Variables.mk
+endif
+
 include ../../.make/default.mk
 include ../../.make/recursion.mk
 include ../../.make/go.mk
