--- a/services/idm/Makefile
+++ b/services/idm/Makefile
@@ -2,7 +2,10 @@ SHELL := bash
 NAME := idm
 TAGS := disable_crypt
 
+ifneq (, $(shell command -v go 2> /dev/null)) # suppress `command not found warnings` for non go targets in CI
 include ../../.bingo/Variables.mk
+endif
+
 include ../../.make/default.mk
 include ../../.make/recursion.mk
 include ../../.make/go.mk
