--- a/services/notifications/Makefile
+++ b/services/notifications/Makefile
@@ -3,7 +3,10 @@ NAME := notifications
 OUTPUT_DIR = ./pkg/email/l10n
 TEMPLATE_FILE = ./pkg/email/l10n/notifications.pot
 
+ifneq (, $(shell command -v go 2> /dev/null)) # suppress `command not found warnings` for non go targets in CI
 include ../../.bingo/Variables.mk
+endif
+
 include ../../.make/default.mk
 include ../../.make/recursion.mk
 include ../../.make/go.mk
