--- a/services/graph/Makefile
+++ b/services/graph/Makefile
@@ -14,7 +14,7 @@ include ../../.make/release.mk
 include ../../.make/docs.mk
 
 .PHONY: go-generate
-go-generate: $(MOCKERY)
+go-generate:
 	$(MOCKERY)
 
 .PHONY: l10n-pull
