Clean invalid documentation links

--- a/deployments/examples/opencloud_full/.env
+++ b/deployments/examples/opencloud_full/.env
@@ -50,11 +50,11 @@ OC_DOMAIN=
 ADMIN_PASSWORD=
 # Demo users should not be created on a production instance,
 # because their passwords are public. Defaults to "false".
-# Also see: https://doc.opencloud.eu/opencloud/latest/deployment/general/general-info.html#demo-users-and-groups
+# If demo users is set to "true", the following user accounts are created automatically:
+# alan, mary, margaret, dennis and lynn - the password is 'demo' for all.
 DEMO_USERS=
 # Define the openCloud loglevel used.
-# For more details see:
-# https://doc.opencloud.eu/opencloud/latest/deployment/services/env-vars-special-scope.html
+#
 LOG_LEVEL=
 # Define the kind of logging.
 # The default log can be read by machines.
@@ -64,8 +64,6 @@ LOG_LEVEL=
 # Define the openCloud storage location. Set the paths for config and data to a local path.
 # Note that especially the data directory can grow big.
 # Leaving it default stores data in docker internal volumes.
-# For more details see:
-# https://doc.opencloud.eu/opencloud/next/deployment/general/general-info.html#default-paths
 # OC_CONFIG_DIR=/your/local/opencloud/config
 # OC_DATA_DIR=/your/local/opencloud/data
 
@@ -74,7 +72,7 @@ LOG_LEVEL=
 # Per default, S3 storage is disabled and the decomposed storage driver is used.
 # To enable S3 storage, uncomment the following line and configure the S3 storage.
 # For more details see:
-# https://doc.opencloud.eu/opencloud/next/deployment/storage/decomposeds3.html
+# https://docs.opencloud.eu/docs/admin/configuration/storage-decomposeds3
 # Note: the leading colon is required to enable the service.
 #DECOMPOSEDS3=:decomposeds3.yml
 # Configure the S3 storage endpoint. Defaults to "http://minio:9000" for testing purposes.
@@ -102,8 +100,7 @@ MINIO_DOMAIN=
 #POSIX=:posix.yml
 
 # Define SMPT settings if you would like to send OpenCloud email notifications.
-# For more details see:
-# https://doc.opencloud.eu/opencloud/latest/deployment/services/s-list/notifications.html
+# 
 # NOTE: when configuring Inbucket, these settings have no effect, see inbucket.yml for details.
 # SMTP host to connect to.
 SMTP_HOST=
@@ -205,7 +202,6 @@ COLLABORA_SSL_VERIFICATION=false
 
 
 ### Debugging - Monitoring ###
-# Please see documentation at: https://opencloud.dev/opencloud/deployment/monitoring-tracing/
 # Note: the leading colon is required to enable the service.
 #MONITORING=:monitoring_tracing/monitoring.yml
 
