add auth app to ocm test setup

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -101,6 +101,9 @@
         "APP_PROVIDER_GRPC_ADDR": "127.0.0.1:10164",
         "APP_REGISTRY_DEBUG_ADDR": "127.0.0.1:10243",
         "APP_REGISTRY_GRPC_ADDR": "127.0.0.1:10242",
+        "AUTH_APP_DEBUG_ADDR": "127.0.0.1:10245",
+        "AUTH_APP_GRPC_ADDR": "127.0.0.1:10246",
+        "AUTH_APP_HTTP_ADDR": "127.0.0.1:10247",
         "AUTH_BASIC_DEBUG_ADDR": "127.0.0.1:10147",
         "AUTH_BASIC_GRPC_ADDR": "127.0.0.1:10146",
         "AUTH_MACHINE_DEBUG_ADDR": "127.0.0.1:10167",
