--- a/tests/config/local/.env-federation
+++ b/tests/config/local/.env-federation
@@ -17,6 +17,9 @@ export APP_PROVIDER_DEBUG_ADDR=127.0.0.1:10165
 export APP_PROVIDER_GRPC_ADDR=127.0.0.1:10164
 export APP_REGISTRY_DEBUG_ADDR=127.0.0.1:10243
 export APP_REGISTRY_GRPC_ADDR=127.0.0.1:10242
+export AUTH_APP_DEBUG_ADDR=127.0.0.1:10245
+export AUTH_APP_GRPC_ADDR=127.0.0.1:10246
+export AUTH_APP_HTTP_ADDR=127.0.0.1:10247
 export AUTH_BASIC_DEBUG_ADDR=127.0.0.1:10147
 export AUTH_BASIC_GRPC_ADDR=127.0.0.1:10146
 export AUTH_MACHINE_DEBUG_ADDR=127.0.0.1:10167
