--- a/deployments/examples/opencloud_full/.env
+++ b/deployments/examples/opencloud_full/.env
@@ -92,12 +92,11 @@ DECOMPOSEDS3_BUCKET=
 # Minio domain. Defaults to "minio.opencloud.test".
 MINIO_DOMAIN=
 
-# POSIX Storage configuration - optional
-# OpenCloud supports posix storage as primary storage.
-# Per default, S3 storage is disabled and the decomposed storage driver is used.
-# To enable POSIX storage, uncomment the following line.
+# OpenCloud uses POSIX storage as the default primary storage.
+# By default, Decomposed storage is disabled, and the POSIX storage driver is used.
+# To enable Decomposed storage, uncomment the following line.
 # Note: the leading colon is required to enable the service.
-#POSIX=:posix.yml
+#DECOMPOSED=:decomposed.yml
 
 # Define SMPT settings if you would like to send OpenCloud email notifications.
 # 
@@ -242,4 +241,4 @@ COMPOSE_PATH_SEPARATOR=:
 # This MUST be the last line as it assembles the supplemental compose files to be used.
 # ALL supplemental configs must be added here, whether commented or not.
 # Each var must either be empty or contain :path/file.yml
-COMPOSE_FILE=docker-compose.yml${OPENCLOUD:-}${TIKA:-}${DECOMPOSEDS3:-}${DECOMPOSEDS3_MINIO:-}${POSIX:-}${COLLABORA:-}${MONITORING:-}${IMPORTER:-}${CLAMAV:-}${ONLYOFFICE:-}${INBUCKET:-}${EXTENSIONS:-}${UNZIP:-}${DRAWIO:-}${JSONVIEWER:-}${PROGRESSBARS:-}${EXTERNALSITES:-}
+COMPOSE_FILE=docker-compose.yml${OPENCLOUD:-}${TIKA:-}${DECOMPOSEDS3:-}${DECOMPOSEDS3_MINIO:-}${DECOMPOSED:-}${COLLABORA:-}${MONITORING:-}${IMPORTER:-}${CLAMAV:-}${ONLYOFFICE:-}${INBUCKET:-}${EXTENSIONS:-}${UNZIP:-}${DRAWIO:-}${JSONVIEWER:-}${PROGRESSBARS:-}${EXTERNALSITES:-}
