--- a/deployments/examples/opencloud_full/.env
+++ b/deployments/examples/opencloud_full/.env
@@ -98,8 +98,8 @@ MINIO_DOMAIN=
 # Note: the leading colon is required to enable the service.
 #DECOMPOSED=:decomposed.yml
 
-# Define SMPT settings if you would like to send OpenCloud email notifications.
-# 
+# Define SMTP settings if you would like to send OpenCloud email notifications.
+#
 # NOTE: when configuring Inbucket, these settings have no effect, see inbucket.yml for details.
 # SMTP host to connect to.
 SMTP_HOST=
