--- a/services/idp/Makefile
+++ b/services/idp/Makefile
@@ -17,15 +17,16 @@ node-generate-prod: assets
 .PHONY: assets
 assets: pnpm-build \
 		assets/identifier/static \
-		assets/identifier/static/favicon.ico \
+		assets/identifier/static/favicon.svg \
 		assets/identifier/static/icon-lilac.svg
 
 assets/identifier/static:
 	mkdir -p assets/identifier/static
 
-.PHONY: assets/identifier/static/favicon.ico # force overwrite
-assets/identifier/static/favicon.ico:
-	cp src/images/favicon.ico assets/identifier/static/favicon.ico
+.PHONY: assets/identifier/static/favicon.svg # force overwrite
+assets/identifier/static/favicon.svg:
+	cp src/images/favicon.svg assets/identifier/static/favicon.svg
+	rm assets/identifier/static/favicon.ico
 
 .PHONY: assets/identifier/static/icon-lilac.svg
 assets/identifier/static/icon-lilac.svg:
