fix: traefik credentials (#555)

--- a/deployments/examples/opencloud_full/.env
+++ b/deployments/examples/opencloud_full/.env
@@ -17,7 +17,9 @@ TRAEFIK_DASHBOARD=
 # Defaults to "traefik.opencloud.test"
 TRAEFIK_DOMAIN=
 # Basic authentication for the traefik dashboard.
-# Defaults to user "admin" and password "admin" (written as: "admin:admin").
+# Defaults to user "admin" and password "admin" (written as: "admin:$2y$05$KDHu3xq92SPaO3G8Ybkc7edd51pPLJcG1nWk3lmlrIdANQ/B6r5pq").
+# To create user:password pair, it's possible to use this command:
+# echo $(htpasswd -nB user) | sed -e s/\\$/\\$\\$/g
 TRAEFIK_BASIC_AUTH_USERS=
 # Email address for obtaining LetsEncrypt certificates.
 # Needs only be changed if this is a public facing server.
