fix: full deployment tika description is wrong (#553)

--- a/deployments/examples/opencloud_full/.env
+++ b/deployments/examples/opencloud_full/.env
@@ -159,7 +159,7 @@ COMPANION_ONEDRIVE_SECRET=
 ## Default Enabled Services ##
 
 ### Apache Tika Content Analysis Toolkit ###
-# Tika (search) is enabled by default, comment if not required.
+# Tika (search) is disabled by default due to performance reasons.
 # Note: the leading colon is required to enable the service.
 #TIKA=:tika.yml
 # Set the desired docker image tag or digest.
