fix(opencloud_full): add missing SMTP env vars
The compose example lacked support for setting various SMTP related
config vars. Even though some of them where present in the '.env' file.

Closes: #511

--- a/deployments/examples/opencloud_full/.env
+++ b/deployments/examples/opencloud_full/.env
@@ -116,6 +116,8 @@ SMTP_USERNAME=
 SMTP_PASSWORD=
 # Authentication method for the SMTP communication.
 SMTP_AUTHENTICATION=
+# Encryption method for the SMTP communication. Possible values are 'starttls', 'ssltls' and 'none'
+SMTP_TRANSPORT_ENCRYPTION=
 # Allow insecure connections to the SMTP server. Defaults to false.
 SMTP_INSECURE=
 
