ci: Allow the `Type:DevOps` label

--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -23,5 +23,6 @@ jobs:
             Type:Maintenance
             Type:Security
             Type:Dependencies
+            Type:DevOps
             dependencies
           add_comment: true
